--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-python-dotenv==1.0.0
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.0
-streamlit==1.28.1
-langchain==0.0.307
-langchain-core==0.0.10
-langchain-groq==0.0.9
-langgraph==0.0.23
-fastapi==0.104.1
-uvicorn==0.24.0
-pydantic==2.4.2
-python-multipart==0.0.6
-aiofiles==23.2.1
+
+opendatasets
+scikit-learn
+numpy 
+pandas
+openai-agents
+langchain-groq
+crewai-tools
+litellm
+langchain 
+langchain_core 
+langchain_community 
+langgraph
+fastapi
+streamlit
