--- a/vercel.json
+++ b/vercel.json
@@ -11,4 +11,20 @@
     }
 
     ]
+}{
+  "builds": [
+    {
+      "src": "src/api.py",
+      "use": "@vercel/python",
+      "config": {
+        "pythonVersion": "3.11"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/api.py"
+    }
+  ]
 }
