--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
-
 opendatasets
 scikit-learn
-numpy 
+numpy
 pandas
-openai-agents
-langchain-groq==0.2.1
-crewai-tools
-litellm
-langchain 
-langchain_core 
-langchain_community 
+
+groq>=0.4.1,<1.0
+langchain-core>=0.3.68,<0.4.0
+langchain>=0.3.0,<0.4.0
+langchain-community>=0.3.0,<0.4.0
+langchain-groq==0.3.6
 langgraph
+
+litellm
+crewai-tools
+
 fastapi
 streamlit
+openai-agents
