--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mle-agent"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python >= "3.10,<3.12"
 dependencies = [
     "crewai-tools",
     "groq>=1.0.0",
